[VAS-1087] fix code smells